<resources>
    <string name="app_name">Prater</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="prater_logo">Prater logo</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="short_username">Username too short</string>
    <string name="short_password">Password too short</string>
    <string name="fill_out_fields">Please fill out all required fields</string>
    <string name="password_incorrect">Password not correct</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="username_exists">Username already exists</string>
    <string name="start_new_conversation">Start new conversation</string>
    <string name="send_message">Send message</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="message">Message</string>
    <string name="user_profile">User profile</string>
    <string name="input_short_long">Please make your username and password between 4 and 25 characters long</string>
    <string name="server_error">Server error</string>
    <string name="check_internet_connection">Please check your internet connection</string>
</resources>